--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^3.3.1",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
