--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
